fix sq + refactor